test/parallel/syncStmt/diten/testSyncScope.good
testSyncScope.chpl:2: error: 'a' undeclared (first use this function)
