test/parallel/syncStmt/diten/testSyncScope.chpl
sync var a: int = 1;
writeln(a); // a is not in scope here
